--- a/public/map.html
+++ b/public/map.html
@@ -14,7 +14,7 @@
 			body {margin:0px;}
 			#map {width:100%;
 				height:100%;
-				background:green;}
+				background:transparent;}
 		-->
 		</style>
 		<script language="JavaScript">
@@ -30,7 +30,7 @@
 					});
 					path.push(marker.getLatLng());
 					console.log(path);
-					L.polyline(path, {color:"red", lineJoin:"round"}).addTo(map);
+					L.polyline(path, {color:"red"}).addTo(map);
 
 				}
 				loadBalloons(addF);
@@ -42,6 +42,11 @@
 					attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
 					maxZoom: 18
 				}).addTo(map);
+				// L.tileLayer('http://tiles.wxtiles.com/wind/20131201_06z/{z}/{x}/{y}.png', {
+				// 	attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
+				// 	maxZoom: 18
+				// }).addTo(map);
+
 				return map;
 			}
 
