--- a/public/create.html
+++ b/public/create.html
@@ -1,38 +1,66 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Create new balloon</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
-    <link href="stylesheets/bootstrap-theme.min.css" rel="stylesheet">
+<head>
+  <title>Create new balloon</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap -->
+  <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+  <link href="stylesheets/bootstrap-theme.min.css" rel="stylesheet">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <h1>Create a new balloon:</h1>
+      <![endif]-->
+      <script>
+        var options = {
+          enableHighAccuracy: true,
+          maximumAge: 0
+        };
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="javascript/bootstrap.min.js"></script>
+        function success(pos) {
+          var crd = pos.coords;
 
-    <form action="balloon/add" method="post">
-      <input type="text" class="form-control" placeholder="Name" name="name">
-      <br>
-      <input type="text" class="form-control" placeholder="Longitude" name="longitude">
-      <br>
-      <input type="text" class="form-control" placeholder="Latitude" name="latitude">
-      <br>
-      <input type="text" class="form-control" placeholder="timestamp" name="timestamp">
-      <br>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+          console.log('Your current position is:');
+          console.log('Latitude : ' + crd.latitude);
+          console.log('Longitude: ' + crd.longitude);
+          console.log('More or less ' + crd.accuracy + ' meters.');
+          $("#longitude").val(crd.longitude);
+          $("#latitude").val(crd.latitude);
+        };
 
-  </body>
-</html>
+        function error(err) {
+          console.warn('ERROR(' + err.code + '): ' + err.message);
+          alert("Unable to determine your location. Enable location services in your privacy settings.")
+        };
+
+        $(document).ready(function(){
+          navigator.geolocation.getCurrentPosition(success, error, options);
+        });
+
+      </script>
+    </head>
+    <body>
+      <h1>Create a new balloon:</h1>
+
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://code.jquery.com/jquery.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="javascript/bootstrap.min.js"></script>
+
+      <form action="balloon/add" method="post">
+        <input type="text" class="form-control" placeholder="Name" name="name">
+        <br>
+        <input type="text" class="form-control" placeholder="Message" name="message">
+        <br>
+        <input type="text" class="form-control" placeholder="Longitude" name="longitude" id="longitude">
+        <br>
+        <input type="text" class="form-control" placeholder="Latitude" name="latitude" id="latitude">
+        <br>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+
+    </body>
+    </html>
