--- a/public/map.html
+++ b/public/map.html
@@ -6,7 +6,8 @@
 			<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
 		<![endif]-->
 		<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="http://raw.github.com/phstc/jquery-dateFormat/master/dist/jquery-dateFormat.min.js"></script>
 		<style type="text/css">
 		<!--
 			html{width:100%;
@@ -24,6 +25,7 @@
 					console.log(b.name);
 					console.log(b);
 					var marker = L.marker([b.location.latitude, b.location.longitude]).addTo(map);
+					marker.bindPopup(b.name + "<br>started: " + $.format.date(b.created, 'yyyy-M-dd HH:mm'));
 					var path = [];
 					$.each(b.history, function(i, l){
 						path.push([l.latitude, l.longitude]);
