added email to balloons

--- a/public/create.html
+++ b/public/create.html
@@ -54,6 +54,9 @@
         <input type="text" class="form-control" placeholder="Name" name="name">
         <br>
         <input type="text" class="form-control" placeholder="Message" name="message">
+	<br>
+        <input type="text" class="form-control" placeholder="e-mail" name="email">
+        <br>
         <br>
         <input type="text" class="form-control" placeholder="Longitude" name="longitude" id="longitude">
         <br>
