--- a/public/create.html
+++ b/public/create.html
@@ -2,12 +2,31 @@
 <html>
 <head>
   <title>Create new balloon</title>
+  <!-- Leaflet -->
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap -->
   <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
   <link href="stylesheets/bootstrap-theme.min.css" rel="stylesheet">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
+  <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="javascript/bootstrap.min.js"></script>
+
+  <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+
+  <style>
+    input.error {border: solid rgba(255,171,171,1) 1px;
+      background: rgba(255,171,171,0.25);
+    }
+    input.valid {border: solid rgba(69, 135, 70, 1) 1px;
+      background: rgba(69, 135, 70, 0.25);
+    }
+    #map{}
+  </style>
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -15,46 +34,79 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
       <![endif]-->
       <script>
-        var options = {
-          enableHighAccuracy: true,
-          maximumAge: 0
-        };
+      var options = {
+        enableHighAccuracy: true,
+        maximumAge: 0
+      };
 
-        function success(pos) {
-          var crd = pos.coords;
+      function success(pos, map) {
+        var crd = pos.coords;
+        console.log(pos);
+        map.setView([crd.latitude, crd.longitude], 15);
+        console.log("ok!");
+      };
 
-          console.log('Your current position is:');
-          console.log('Latitude : ' + crd.latitude);
-          console.log('Longitude: ' + crd.longitude);
-          console.log('More or less ' + crd.accuracy + ' meters.');
-          $("#longitude").val(crd.longitude);
-          $("#latitude").val(crd.latitude);
-        };
+      function error(err) {
+        console.warn('ERROR(' + err.code + '): ' + err.message);
+      };
 
-        function error(err) {
-          console.warn('ERROR(' + err.code + '): ' + err.message);
-          alert("Unable to determine your location. Enable location services in your privacy settings.")
-        };
-
-        $(document).ready(function(){
-          navigator.geolocation.getCurrentPosition(success, error, options);
+      function initMap(){
+        var map = L.map('map').setView([43.5, 10], 5);
+        L.tileLayer('http://{s}.tile.cloudmade.com/8d1255ae36dc4decb3791bfa3f1d58cc/997/256/{z}/{x}/{y}.png', {
+          attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
+          maxZoom: 18
+        }).addTo(map);
+        map.on("moveend",function(e){
+          c = this.getCenter();
+          $("#longitude").val(c.lng);
+          $("#longitude").valid();
+          $("#latitude").val(c.lat);
+          $("#latitude").valid();
         });
+        return map;
+      }
+
+      $(document).ready(function(){
+        map = initMap();
+        navigator.geolocation.getCurrentPosition(function(pos){
+          success(pos, map);
+        }, error, {timeout: 5000});
+
+        $("#addBalloonForm").validate({
+          errorClass: 'error',
+          validClass: 'valid',
+          rules:{
+            name: "required",
+            email: {
+              required: true,
+              email: true
+            },
+            longitude: {
+              required: true,
+              number: true,
+              max: 180,
+              min: -180
+            },
+            latitude: {
+              required: true,
+              number: true,
+              max: 90,
+              min: -90
+            }
+          }
+        });
+      });
 
       </script>
     </head>
     <body>
       <h1>Create a new balloon:</h1>
 
-      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-      <script src="https://code.jquery.com/jquery.js"></script>
-      <!-- Include all compiled plugins (below), or include individual files as needed -->
-      <script src="javascript/bootstrap.min.js"></script>
-
-      <form action="balloon/add" method="post">
+      <form action="balloon/add" method="post" id="addBalloonForm">
         <input type="text" class="form-control" placeholder="Name" name="name">
         <br>
         <input type="text" class="form-control" placeholder="Message" name="message">
-	<br>
+        <br>
         <input type="text" class="form-control" placeholder="e-mail" name="email">
         <br>
         <br>
@@ -64,6 +116,15 @@
         <br>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+      <br>
+      <div style="position:relative; width:500px; height:500px;">
+        <div style="position:absolute; width:100%; height:100%; z-index: 1;" id="map"></div>
+        <div style="position:absolute; width:100%; height:100%; z-index: 99; pointer-events:none;">
+          <svg style="width:100%; height:100%; background:transparent;">
+              <circle cx="50%" cy="50%" r="10" stroke="black" stroke-width="2" fill="transparent" />
+          </svg>
+        </div>
+      </div>
 
     </body>
     </html>
