made date format plugin local

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<![endif]-->
 		<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script src="http://raw.github.com/phstc/jquery-dateFormat/master/dist/jquery-dateFormat.min.js"></script>
+		<script src="javascript/jquery-dateFormat.min.js"></script>
 		<style type="text/css">
 		<!--
 			html{width:100%;
