--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 					list = $.map(data, function(el){
 						return [[el.latitude, el.longitude]];
 					});
-					L.polyline(list, {color:'red'}).addTo(map);
+					L.polyline(list, {color:'red', weight:2}).addTo(map);
 				});
 			}
 
