--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 			});
 
 			function initMap(){
-				var map = L.map('map').setView([53.5, 10], 5);
+				var map = L.map('map', {maxZoom: 15, minZoom:2}).setView([53.5, 10], 5);
 				L.tileLayer('http://{s}.tile.cloudmade.com/8d1255ae36dc4decb3791bfa3f1d58cc/997/256/{z}/{x}/{y}.png', {
 					attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
 					maxZoom: 18,
