--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
 			<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
 		<![endif]-->
 		<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script src="javascript/jquery-dateFormat.min.js"></script>
+		<script src="javascript/jquery.svg.min.js"></script>
+		<script src="javascript/balloon.js"></script>
 		<style type="text/css">
 		<!--
 			html{width:100%;
@@ -19,61 +21,37 @@
 		-->
 		</style>
 		<script language="JavaScript">
-			function showHistory(id, c){
-				var c = c || "red";
-				$.getJSON('balloon/'+id+'/history', function(data, status, code){
-					list = $.map(data, function(el){
-						return [[el.latitude, el.longitude]];
-					});
-					L.polyline(list, {color:c, weight:2}).addTo(map);
-				});
-			}
 
-			function showFullHistory(id, c){
-				var c = c ||"blue";
-				$.getJSON('balloon/'+id+'/full_history', function(data){
-					list = $.map(data, function(el){
-						return [[el.latitude, el.longitude]];
-					});
-					L.polyline(list, {color:c, weight: 2}).addTo(map);
-				});
-			}
+			var defaultColor = "darkgray";
 
 			$(document).ready(function(){
 				map = initMap();
 				var addF = function(i, b){
-					if (b.location.latitude == null ||
-						b.location.longitude == null) return;
-
-
-					var myIcon = L.icon({
-						// iconUrl: 'images/balloon.png',
-						// iconRetinaUrl: 'my-icon@2x.png',
-						iconSize: [50, 143],
-						iconSize: [20, 52],
-						iconAnchor: [10, 30],
-						popupAnchor: [0, -35],
-						// shadowUrl: 'my-icon-shadow.png',
-						// shadowRetinaUrl: 'my-icon-shadow@2x.png',
-						// shadowSize: [68, 95],
-						// shadowAnchor: [22, 94]
-					});
-					console.log(myIcon);
-					console.log(myIcon);
-					var marker = L.marker([b.location.latitude, b.location.longitude]).addTo(map);
-					showFullHistory(b.id, b.color);
-					marker.bindPopup(b.name + "<br>started: " + $.format.toBrowserTimeZone(b.created, 'yyyy-M-dd HH:mm')
-						+"<br>last updated: " + $.format.toBrowserTimeZone(b.location.timestamp, 'yyyy-M-dd HH:mm') + '<br>'
-						// + '<a href="javascript:showHistory(&#39;'+b.id+'&#39;);">show history</a><br>'
-						// + '<a href="javascript:showFullHistory(&#39;'+b.id+'&#39;);">show full history</a>'
-					);
+					var c = new Balloon(b, map);
 				}
 				$.getJSON('http://freegeoip.net/json/', function(data, status){
 					map.setView(new L.latLng(data.latitude, data.longitude), 5, {animate:true});
 				});				
 				loadBalloons(addF);
 
+				svgBalloonTest(map, [53.5, 9], '#ff0000');
+				svgBalloonTest(map, [53.5, 10], '#00ff00');
+				svgBalloonTest(map, [53.5, 11], '#0000ff');
 			});
+
+			function svgBalloonTest(map, ll, color){
+				var myIcon = L.divIcon({className: 'my-div-icon'});
+				// you can set .my-div-icon styles in CSS
+
+				var m2 = L.marker(ll, {icon: myIcon}).addTo(map);
+				m2.bindPopup("<b>Hello world!</b><br>I am a popup.");
+				$(m2._icon).load('images/balloon_color.svg', function(a,b,c){
+					var svg = $(m2._icon).find('svg')[0];
+					console.log(svg);
+					svg.setAttribute('height', '50');
+					console.log($(svg).find('#color_fill')[0].setAttribute('style', 'fill:'+color+';fill-opacity:1;stroke:none'));
+				});
+			}
 
 			function initMap(){
 				var map = L.map('map', {maxZoom: 15, minZoom:2}).setView([53.5, 10], 5);
