--- a/public/create.html
+++ b/public/create.html
@@ -62,9 +62,10 @@
 
       function initMap(){
         var map = L.map('map').setView([43.5, 10], 5);
-        L.tileLayer('http://{s}.tile.cloudmade.com/8d1255ae36dc4decb3791bfa3f1d58cc/997/256/{z}/{x}/{y}.png', {
+        L.tileLayer('http://maps.vesseltracker.com/vesseltracker/{z}/{x}/{y}.png', {
           attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
           maxZoom: 18
+          ,detectRetina: true
         }).addTo(map);
         map.on("moveend",function(e){
           this.vb.setCenterFields();
